--- a/DDAYGO/ViewController/My/Lottery/ZP_HistoryBet/ZP_HistoryHomePage/ZP_HistoryBetCell/ZP_HistoryBetCell.xib
+++ b/DDAYGO/ViewController/My/Lottery/ZP_HistoryBet/ZP_HistoryHomePage/ZP_HistoryBetCell/ZP_HistoryBetCell.xib
@@ -79,8 +79,8 @@
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T8v-6d-6er">
                         <rect key="frame" x="198" y="0.0" width="30" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="30" id="RVl-YB-4WH"/>
-                            <constraint firstAttribute="width" constant="30" id="gzK-D2-AoH"/>
+                            <constraint firstAttribute="width" constant="30" id="T0k-4I-1Xi"/>
+                            <constraint firstAttribute="height" constant="30" id="yeO-M8-F4i"/>
                         </constraints>
                         <state key="normal" title="5" backgroundImage="bg_choose_redball">
                             <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -95,14 +95,13 @@
                     <constraint firstAttribute="trailingMargin" secondItem="icH-5f-n2w" secondAttribute="trailing" id="NFw-jT-5h2"/>
                     <constraint firstItem="icH-5f-n2w" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" constant="-2.25" id="W3i-M3-UEg"/>
                     <constraint firstItem="JO5-Hf-oYV" firstAttribute="leading" secondItem="yKh-Da-rsf" secondAttribute="trailing" constant="8" id="YeH-VB-bgD"/>
-                    <constraint firstItem="T8v-6d-6er" firstAttribute="leading" secondItem="Qid-dU-l6H" secondAttribute="trailing" constant="8" id="Z1f-B5-x8h"/>
                     <constraint firstItem="JO5-Hf-oYV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="bNY-l0-lBN"/>
                     <constraint firstItem="zYE-9j-mvV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="hCt-e9-QKs"/>
                     <constraint firstItem="HDX-5u-q6z" firstAttribute="leading" secondItem="zYE-9j-mvV" secondAttribute="trailing" constant="8" id="nGQ-kz-Igg"/>
                     <constraint firstItem="Qid-dU-l6H" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="tKJ-oj-HeM"/>
                     <constraint firstItem="Qid-dU-l6H" firstAttribute="leading" secondItem="JO5-Hf-oYV" secondAttribute="trailing" constant="8" id="vmg-Qw-CIy"/>
-                    <constraint firstItem="icH-5f-n2w" firstAttribute="leading" secondItem="T8v-6d-6er" secondAttribute="trailing" constant="68" id="wHI-oI-06I"/>
-                    <constraint firstItem="T8v-6d-6er" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="xsS-yb-DPb"/>
+                    <constraint firstItem="T8v-6d-6er" firstAttribute="leading" secondItem="Qid-dU-l6H" secondAttribute="trailing" constant="8" id="yB9-qf-zgm"/>
+                    <constraint firstItem="T8v-6d-6er" firstAttribute="baseline" secondItem="Qid-dU-l6H" secondAttribute="baseline" id="yPM-wt-Whu"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
