--- a/DDAYGO/ViewController/My/Lottery/ZP_LotteryBet/BetHeaderCell/BetTableViewMyCell2.xib
+++ b/DDAYGO/ViewController/My/Lottery/ZP_LotteryBet/BetHeaderCell/BetTableViewMyCell2.xib
@@ -17,6 +17,20 @@
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lif-0m-qRq">
+                        <rect key="frame" x="0.0" y="42.5" width="320" height="1"/>
+                        <color key="backgroundColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="8cS-Pc-AHn"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="Lif-0m-qRq" secondAttribute="trailing" id="K1t-Qy-AgF"/>
+                    <constraint firstItem="Lif-0m-qRq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Zks-5W-gN2"/>
+                    <constraint firstAttribute="bottom" secondItem="Lif-0m-qRq" secondAttribute="bottom" id="wpy-vk-z00"/>
+                </constraints>
             </tableViewCellContentView>
         </tableViewCell>
     </objects>
